Tidied up (now compiles without warnings)