@@ -6,8 +6,6 @@ lazy val root = project
     libraryDependencies += "org.scala-lang" %% "scala3-staging" % scalaVersion.value,
     libraryDependencies += "dev.zio" %% "zio" % "2.0.19",
     libraryDependencies += "dev.zio" %% "zio-streams" % "2.0.19",
-    javacOptions ++= Seq("--release", "20", "--enable-preview"),
-    javaOptions += "--enable-preview",
     scalacOptions ++= Seq(
       // "-Xdisable-assertions",
       "-Ycheck-all-patmat",
@@ -17,6 +15,7 @@ lazy val root = project
       "-Yexplicit-nulls",
       "-Ysafe-init",
       "-explain",
+      "-feature",
       "-language:strictEquality",
     ),
     version := "0.1.0",
